src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_CP__c</fullName>
        <label>Address (CP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Local__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - Birth_Date__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Mobile_No__c</fullName>
        <label>Alternate Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_number_1__c</fullName>
        <label>Alternate Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_number_2__c</fullName>
        <label>Alternate Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_number_3__c</fullName>
        <label>Alternate Number 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_office_phone_number__c</fullName>
        <label>Alternate Phone Number (O)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Anniversary__c</fullName>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Of_Requirement__c</fullName>
        <label>Area Of Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Aarey Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agripada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alibag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altamount Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambernath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambivali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amboli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri-Kurla Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anu Shakti Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asangaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August Kranti Marg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayodhya Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azad Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babulnath Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra Kurla Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangur Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bari Wada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behram Baug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellasis Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverly park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhadane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhandup East</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Background_Image_From__c</fullName>
        <label>Background Image From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_date_of_1st_child__c</fullName>
        <label>Birth Date Of 1st Child</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_date_of_2nd_child__c</fullName>
        <label>Birth Date Of 2nd Child</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_date_of_3rd_child__c</fullName>
        <label>Birth Date Of 3rd Child</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_in_Lacs_Max__c</fullName>
        <label>Budget in Lacs (Max)</label>
        <summarizedField>Opportunity.S_Budget_In_lacs__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_in_Lacs_Min__c</fullName>
        <label>Budget in Lacs (Min)</label>
        <summarizedField>Opportunity.S_Budget_In_lacs__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CP_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cars_owned_brand_model__c</fullName>
        <label>Cars Owned (Brand / Model)</label>
        <picklist>
            <picklistValues>
                <fullName>Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baleno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celerio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ciaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eeco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ertiga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gypsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omni.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ritz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Cross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stingray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swift Dzire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitara Brezza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wagon R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai i20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Creta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Elantra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Verna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Xcent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Santa Fe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai Grand i10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skoda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skoda Superb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Organisation__c</fullName>
        <label>Channel Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Rating_CP__c</fullName>
        <label>Channel Rating (CP)</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Local__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Permanent__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_R__c</fullName>
        <label>City (R)</label>
        <picklist>
            <controllingField>Residential_State_Province__c</controllingField>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Blair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amalapuram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anakapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bapatla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bheemunipatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhimavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobbili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilakaluripet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chirala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuddapah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gooty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanamkonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindupur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaggaiahpet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammalamadugu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadiri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kakinada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandukur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kavali</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Club_memberships_If_any__c</fullName>
        <label>Club Memberships (If Any)</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Co_Owner__c</fullName>
        <label>Second Applicant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <displayFormat>C{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name of the customer, [Person account company name]</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_1_Friend__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Number_1st_Child__c</fullName>
        <label>Contact Number 1st Child</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_2_Friend__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Number_2st_Child__c</fullName>
        <label>Contact Number 2st Child</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_3_Friend__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Number_3rd_Child__c</fullName>
        <label>Contact Number 3rd Child</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_Father__c</fullName>
        <label>Contact Number Father</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_Mother__c</fullName>
        <label>Contact Number Mother</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_Spouse__c</fullName>
        <label>Contact Number Spouse</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Correspondence__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Local__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Permanent__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address__c</fullName>
        <label>Correspondence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address_line2__c</fullName>
        <label>Correspondence Address Line2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_CP__c</fullName>
        <label>Country (CP)</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bassasda India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>+61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+852</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+86</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+91</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>+971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+355</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+213</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-684</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+376</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+244</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-264</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+672</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-268</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+374</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+297</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-242</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+880</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-246</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+375</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+501</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+229</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-441</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+975</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_R__c</fullName>
        <label>Country (R)</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zeland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cross_Project_Exposure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cross Project Exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <label>Customer Category</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_newspaper__c</fullName>
        <label>Daily Newspaper</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Of_Registration__c</fullName>
        <label>Date Of Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Agreement__c</fullName>
        <label>Date Of Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Application_received__c</fullName>
        <label>Date Of Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_PTM__c</fullName>
        <label>Date Of PTM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_TPT_agreement__c</fullName>
        <label>Date Of TPT Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation_Correspondence__c</fullName>
        <label>Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation_Local__c</fullName>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>